<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dk.medcom.video.api</groupId>
	<artifactId>medcom-video-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.5</version>
	</parent>
	<repositories>
		<repository>
			<id>Central</id>
			<url>https://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>github-public</id>
			<url>https://public:&#103;hp_Y6nRFazi9yNo0IMpxwTFIagW352c1539nyfn@maven.pkg.github.com/kvalitetsit/*</url>
		</repository>
		<repository>
			<id>github-public1</id>
			<url>https://public:&#103;hp_Y6nRFazi9yNo0IMpxwTFIagW352c1539nyfn@maven.pkg.github.com/kvalitetsit/*</url>
		</repository>
		<repository>
			<id>github-public2</id>
			<url>https://public:&#103;hp_Y6nRFazi9yNo0IMpxwTFIagW352c1539nyfn@maven.pkg.github.com/kvalitetsit/*</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<testcontainers.version>1.15.1</testcontainers.version>
		<spring-prometheus-app-info-version>1.2.0</spring-prometheus-app-info-version>
		<shed-lock-version>4.42.0</shed-lock-version>
	</properties>
	<dependencies>
		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>mockserver</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>mysql</artifactId>
				<version>${testcontainers.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>3.12</version>
			</dependency>

			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.15</version>
			</dependency>

			<!-- Pin flyway to 6.0.8 -->
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>6.0.8</version>
			</dependency>

			<!-- Request ID logger -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-request-id-logger</artifactId>
				<version>1.2.1</version>
			</dependency>

			<!-- Actuator and prometheus -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-prometheus-app-info</artifactId>
				<version>${spring-prometheus-app-info-version}</version>
			</dependency>

			<dependency>
				<groupId>org.glassfish.jersey</groupId>
				<artifactId>jersey-bom</artifactId>
				<version>2.29.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Audit logging -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>audit-api</artifactId>
				<version>2.0.1</version>
			</dependency>

			<!-- Nats driver -->
			<dependency>
				<groupId>io.nats</groupId>
				<artifactId>jnats</artifactId>
				<version>2.16.8</version>
			</dependency>

			<!-- Task locking -->
			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-spring</artifactId>
				<version>${shed-lock-version}</version>
			</dependency>

			<dependency>
				<groupId>net.javacrumbs.shedlock</groupId>
				<artifactId>shedlock-provider-jdbc-template</artifactId>
				<version>${shed-lock-version}</version>
			</dependency>

			<!-- Logback -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>7.2</version>
				<scope>runtime</scope>
			</dependency>

			<dependency>
				<groupId>com.github.jknack</groupId>
				<artifactId>handlebars</artifactId>
				<version>4.3.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<finalName>${artifactId}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>17</release>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.9.10</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<prefix>git</prefix>
					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
					<verbose>true</verbose>
					<useNativeGit>false</useNativeGit>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<skipPoms>false</skipPoms>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<abbrevLength>7</abbrevLength>
					<skip>false</skip>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
						<forceLongFormat>false</forceLongFormat>
					</gitDescribe>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
		</plugins>
		<pluginManagement>
			<plugins>
<!--				&lt;!&ndash;This plugin's configuration is used to store Eclipse m2e settings -->
<!--					only. It has no influence on the Maven build itself. &ndash;&gt;-->
<!--				<plugin>-->
<!--					<groupId>org.eclipse.m2e</groupId>-->
<!--					<artifactId>lifecycle-mapping</artifactId>-->
<!--					<version>1.0.0</version>-->
<!--					<configuration>-->
<!--						<lifecycleMappingMetadata>-->
<!--							<pluginExecutions>-->
<!--								<pluginExecution>-->
<!--									<pluginExecutionFilter>-->
<!--										<groupId>pl.project13.maven</groupId>-->
<!--										<artifactId>git-commit-id-plugin</artifactId>-->
<!--										<versionRange>[0.0.1,)</versionRange>-->
<!--										<goals>-->
<!--											<goal>revision</goal>-->
<!--										</goals>-->
<!--									</pluginExecutionFilter>-->
<!--									<action>-->
<!--										<ignore/>-->
<!--									</action>-->
<!--								</pluginExecution>-->
<!--							</pluginExecutions>-->
<!--						</lifecycleMappingMetadata>-->
<!--					</configuration>-->
<!--				</plugin>-->
			</plugins>
		</pluginManagement>
	</build>
	<modules>
        <module>documentation</module>
		<module>medcom-video-api-interface</module>
		<module>medcom-video-api-service</module>
		<module>medcom-video-api-web</module>
		<module>medcom-video-api-test</module>
		<module>medcom-video-api-qa</module>
	</modules>
</project>
